syntax = "proto3";

package pb;

option go_package = "github.com/theme-ce/simple-shop/pb";

message Order {
    int64 id = 1;
    string username = 2;
    double total_price = 3;
    string status = 4;
}

// Create order
message CreateOrderRequest {
    string username = 1;
}

message CreateOrderResponse {
    Order order = 1;
}

// Update order
message UpdateOrderRequest {
    int64 id = 1;
    string status = 2;
}

message UpdateOrderResponse {
    Order order = 1;
}